syntax = "proto3";
option go_package = ".";


 service USER{ 
  rpc GetUserByUserType(GetUserByUserTypeRequest)returns (GetUserByUserTypeResponse);
  rpc GetBalanceByID(GetBalanceByIDRequest)returns(GetBalanceByIDResponse);
  rpc UpdateBalance(UpdateBalanceRequest)returns(Response);
  rpc Registration(RegistrationRequest)returns(RegistrationResponse){};
  rpc GetUser(GetUserRequest)returns(GetUserResponse){};
  rpc GetAllUsers(GetAllUsersRequest)returns(GetAllUsersResponse);
  rpc DeleteUser(DeleteUserRequest)returns(Response);
  rpc UpdateUser(UpdateUserRequest)returns(Response);
  rpc Authentication(AuthenticationRequest)returns(AuthenticationResponse);
  rpc RefreshMyTokens(RefreshTokensRequest)returns(RefreshTokensResponse);
  rpc Logout(LogoutRequest)returns(Response);
 }


message GetAllUsersRequest{}
message GetAllUsersResponse{
  repeated User users = 1;
}

message Response{}


message LogoutRequest{
   string accessToken=1;
   string id=2;
}

message UpdateUserRequest{
  string accessToken = 1;
  User user = 2;
  string id = 3;
}

message RegistrationRequest{
  string name = 2;
  uint64 balance = 3;
  string usertype = 4;
  string password = 5;
}
message RegistrationResponse{
  string id = 1;
}

message AuthenticationRequest{
   string id = 1;
   string password = 2;

}

message RefreshTokensRequest{
   string refreshToken = 1;
}
message RefreshTokensResponse{
  string refreshToken = 1;
  string accessToken = 2;
}

message GetUserRequest{
  string accessToken = 1;
  string id = 2;
}

message DeleteUserRequest{
  string accessToken = 1;
  string id = 2;
}

message GetUserResponse{
  User user = 1;
}



message AuthenticationResponse{
   string accessToken = 1;
   string refreshToken = 2;
}

message User{
  string id = 1;
  string name = 2;
  uint64 balance = 3;
  string usertype = 4;
  string password = 5;
}

message GetUserByUserTypeRequest{
    string accessToken = 1;
    string usertype=2;
}

message GetUserByUserTypeResponse{
    repeated User users = 1;
}

message GetBalanceByIDRequest{
    
    string id=1;
}

message GetBalanceByIDResponse{
    uint64 balance = 1;
}

message UpdateBalanceRequest{
    string id = 1;
    uint64 balance = 2;
}